--- a/AS.html
+++ b/AS.html
@@ -1,8 +1,8 @@
 <html>
   <body>
-    <div onclick="()hi"></div>
+    <div onclick="hi()"></div>
     <script>
-      function ()hi{
+      function hi(){
       alert(hi);
       };
     </script>
